--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "fa90a5da",
    "metadata": {},
    "outputs": [],
@@ -466,7 +466,7 @@
     "\n",
     "    for node in graph.nodes():\n",
     "        node_centrality.append(centrality_result.result[node])\n",
-    "        node_text.append(f\"Node: '{node}'     {convert_to_normal(centrality_result.name)}: {str(centrality_result.result[node])}\")\n",
+    "        node_text.append(f\"Node: '{node}'<br>{convert_to_normal(centrality_result.name)}: {str(centrality_result.result[node])}\")\n",
     "    \n",
     "    node_trace.marker.color = node_centrality\n",
     "    node_trace.marker.cmax = max(node_centrality)\n",
@@ -475,7 +475,7 @@
     "\n",
     "    fig = go.Figure(data=[edge_trace, node_trace],\n",
     "                    layout=go.Layout(\n",
-    "                        title=f'<br>Output for \"{convert_to_normal(centrality_result.name)}\"',\n",
+    "                        title=f'Output for \"{convert_to_normal(centrality_result.name)}\"',\n",
     "                        titlefont_size=16,\n",
     "                        showlegend=False,\n",
     "                        hovermode='closest',\n",
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "0de8bdf6",
    "metadata": {},
    "outputs": [
@@ -508,76 +508,76 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.16296551357005684,
-          -0.3026729634211634,
-          -0.5731850972663599,
-          -0.3026729634211634,
-          0.6534570256794987,
-          0.8913499557439405,
-          0.6534570256794987,
-          0.07421035870184335,
-          0.6534570256794987,
-          0.9999999999999999,
-          -0.06348726428263608,
-          0.07421035870184335,
-          -0.06348726428263608,
-          -0.22642136813271707,
-          0.2959868325953268,
-          0.3414511413101974,
-          0.2959868325953268,
-          0.5128316614515265,
-          0.2959868325953268,
-          0.07421035870184335,
-          -0.339661751343087,
-          -0.3026729634211634,
-          -0.3026729634211634,
-          -0.36130586945483667,
-          -0.3026729634211634,
-          -0.5148984170544608,
-          -0.3026729634211634,
-          -0.07377642194330777,
-          -0.3026729634211634,
-          0.07421035870184335,
-          -0.3026729634211634,
-          -0.605370820862011,
-          -0.3026729634211634,
-          -0.5455414881516959
+          0.2641578418288696,
+          0.3636388718267653,
+          0.670047617053044,
+          0.3636388718267653,
+          -0.6476178322545155,
+          -0.8288053871116294,
+          -0.6476178322545155,
+          -0.1018267211831403,
+          -0.6476178322545155,
+          -0.9999999999999999,
+          -0.24666033437237952,
+          -0.1018267211831403,
+          -0.24666033437237952,
+          -0.40928488060183954,
+          -0.2536985925657395,
+          -0.4308420563252227,
+          -0.2536985925657395,
+          -0.29533204984536754,
+          -0.2536985925657395,
+          -0.1018267211831403,
+          0.2936029464632896,
+          0.3636388718267653,
+          0.3636388718267653,
+          0.6170735626857833,
+          0.3636388718267653,
+          0.5607729395628006,
+          0.3636388718267653,
+          0.4204547045197308,
+          0.3636388718267653,
+          -0.1018267211831403,
+          0.3636388718267653,
+          0.44975637817816855,
+          0.3636388718267653,
+          0.574562992141383
          ],
          "y": [
-          -0.4906133555613981,
-          -0.23869167890914333,
-          -0.6390701227067553,
-          -0.23869167890914333,
-          -0.010645479359845996,
-          0.01867851365514322,
-          -0.010645479359845996,
-          0.13913243540869027,
-          -0.010645479359845996,
-          -0.2161945150815831,
-          0.444574695516284,
-          0.13913243540869027,
-          0.444574695516284,
-          0.7988738921046403,
-          0.4676701912738824,
-          0.7258503938970718,
-          0.4676701912738824,
-          0.6075995244330236,
-          0.4676701912738824,
-          0.13913243540869027,
-          -0.5168293612737009,
-          -0.23869167890914333,
-          -0.23869167890914333,
-          -0.02538903417476617,
-          -0.23869167890914333,
-          -0.4050717264016511,
-          -0.23869167890914333,
-          -0.31383986340882886,
-          -0.23869167890914333,
-          0.13913243540869027,
-          -0.23869167890914333,
-          -0.25646421938552066,
-          -0.23869167890914333,
-          -0.08957029002554327
+          -0.20883238696837236,
+          -0.033622552153543164,
+          -0.3068464665556054,
+          -0.033622552153543164,
+          0.08954049742455199,
+          0.21363373239482697,
+          0.08954049742455199,
+          -0.008252927246970201,
+          0.08954049742455199,
+          0.06453717416094787,
+          -0.25153706905387313,
+          -0.008252927246970201,
+          -0.25153706905387313,
+          -0.5363098434435494,
+          0.22781884603806477,
+          0.24724520317887902,
+          0.22781884603806477,
+          0.44798324653830635,
+          0.22781884603806477,
+          -0.008252927246970201,
+          0.15508064230607516,
+          -0.033622552153543164,
+          -0.033622552153543164,
+          -0.009526348570886323,
+          -0.033622552153543164,
+          -0.14670256511853874,
+          -0.033622552153543164,
+          -0.2660866394511384,
+          -0.033622552153543164,
+          -0.008252927246970201,
+          -0.033622552153543164,
+          0.20005592627973226,
+          -0.033622552153543164,
+          0.1218215302410939
          ]
         },
         {
@@ -660,65 +660,65 @@
          },
          "mode": "markers",
          "text": [
-          "Node: 'C02D5.3'     Out Degree Centrality: 0.058823529411764705",
-          "Node: 'C29E4.7'     Out Degree Centrality: 0.058823529411764705",
-          "Node: 'C08F8.8'     Out Degree Centrality: 0.1764705882352941",
-          "Node: 'K02F3.5'     Out Degree Centrality: 0.0",
-          "Node: 'C34C6.5'     Out Degree Centrality: 0.11764705882352941",
-          "Node: 'ZK686.4'     Out Degree Centrality: 0.1764705882352941",
-          "Node: 'ZC518.2'     Out Degree Centrality: 0.0",
-          "Node: 'W02D3.11'     Out Degree Centrality: 0.058823529411764705",
-          "Node: 'C09D4.5'     Out Degree Centrality: 0.0",
-          "Node: 'VC5.4'     Out Degree Centrality: 0.3529411764705882",
-          "Node: 'F55C5.8'     Out Degree Centrality: 0.0",
-          "Node: 'C13F10.7'     Out Degree Centrality: 0.0",
-          "Node: 'F45E1.6'     Out Degree Centrality: 0.0",
-          "Node: 'C06A5.11'     Out Degree Centrality: 0.0",
-          "Node: 'C02D5.4'     Out Degree Centrality: 0.0",
-          "Node: 'F13A7.10'     Out Degree Centrality: 0.0",
-          "Node: 'F32E10.4'     Out Degree Centrality: 0.0",
-          "Node: 'F20D1.9'     Out Degree Centrality: 0.0"
+          "Node: 'C02D5.3'<br>Out Degree Centrality: 0.058823529411764705",
+          "Node: 'C29E4.7'<br>Out Degree Centrality: 0.058823529411764705",
+          "Node: 'C08F8.8'<br>Out Degree Centrality: 0.1764705882352941",
+          "Node: 'K02F3.5'<br>Out Degree Centrality: 0.0",
+          "Node: 'C34C6.5'<br>Out Degree Centrality: 0.11764705882352941",
+          "Node: 'ZK686.4'<br>Out Degree Centrality: 0.1764705882352941",
+          "Node: 'ZC518.2'<br>Out Degree Centrality: 0.0",
+          "Node: 'W02D3.11'<br>Out Degree Centrality: 0.058823529411764705",
+          "Node: 'C09D4.5'<br>Out Degree Centrality: 0.0",
+          "Node: 'VC5.4'<br>Out Degree Centrality: 0.3529411764705882",
+          "Node: 'F55C5.8'<br>Out Degree Centrality: 0.0",
+          "Node: 'C13F10.7'<br>Out Degree Centrality: 0.0",
+          "Node: 'F45E1.6'<br>Out Degree Centrality: 0.0",
+          "Node: 'C06A5.11'<br>Out Degree Centrality: 0.0",
+          "Node: 'C02D5.4'<br>Out Degree Centrality: 0.0",
+          "Node: 'F13A7.10'<br>Out Degree Centrality: 0.0",
+          "Node: 'F32E10.4'<br>Out Degree Centrality: 0.0",
+          "Node: 'F20D1.9'<br>Out Degree Centrality: 0.0"
          ],
          "type": "scatter",
          "x": [
-          -0.16296551357005684,
-          -0.5731850972663599,
-          0.6534570256794987,
-          0.9999999999999999,
-          -0.06348726428263608,
-          0.2959868325953268,
-          -0.22642136813271707,
-          -0.339661751343087,
-          0.5128316614515265,
-          -0.3026729634211634,
-          -0.5455414881516959,
-          -0.5148984170544608,
-          -0.605370820862011,
-          0.3414511413101974,
-          -0.36130586945483667,
-          -0.07377642194330777,
-          0.07421035870184335,
-          0.8913499557439405
+          0.2641578418288696,
+          0.670047617053044,
+          -0.6476178322545155,
+          -0.9999999999999999,
+          -0.24666033437237952,
+          -0.2536985925657395,
+          -0.40928488060183954,
+          0.2936029464632896,
+          -0.29533204984536754,
+          0.3636388718267653,
+          0.574562992141383,
+          0.5607729395628006,
+          0.44975637817816855,
+          -0.4308420563252227,
+          0.6170735626857833,
+          0.4204547045197308,
+          -0.1018267211831403,
+          -0.8288053871116294
          ],
          "y": [
-          -0.4906133555613981,
-          -0.6390701227067553,
-          -0.010645479359845996,
-          -0.2161945150815831,
-          0.444574695516284,
-          0.4676701912738824,
-          0.7988738921046403,
-          -0.5168293612737009,
-          0.6075995244330236,
-          -0.23869167890914333,
-          -0.08957029002554327,
-          -0.4050717264016511,
-          -0.25646421938552066,
-          0.7258503938970718,
-          -0.02538903417476617,
-          -0.31383986340882886,
-          0.13913243540869027,
-          0.01867851365514322
+          -0.20883238696837236,
+          -0.3068464665556054,
+          0.08954049742455199,
+          0.06453717416094787,
+          -0.25153706905387313,
+          0.22781884603806477,
+          -0.5363098434435494,
+          0.15508064230607516,
+          0.44798324653830635,
+          -0.033622552153543164,
+          0.1218215302410939,
+          -0.14670256511853874,
+          0.20005592627973226,
+          0.24724520317887902,
+          -0.009526348570886323,
+          -0.2660866394511384,
+          -0.008252927246970201,
+          0.21363373239482697
          ]
         }
        ],
@@ -1551,7 +1551,7 @@
          "font": {
           "size": 16
          },
-         "text": "<br>Network graph for Out Degree Centrality"
+         "text": "Output for \"Out Degree Centrality\""
         },
         "xaxis": {
          "showgrid": false,
