--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -406,6 +406,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "id": "0b19e0dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "plotly.graph_objs._figure.Figure"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "id": "fa90a5da",
    "metadata": {},
