--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -406,33 +406,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "0b19e0dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "plotly.graph_objs._figure.Figure"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 39,
    "id": "fa90a5da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_network_graph(graph: nx.Graph, centrality_result: CentralityAlgorithmOutput) -> None:\n",
+    "def plot_network_graph(graph: nx.Graph, centrality_result: CentralityAlgorithmOutput) -> go.Figure:\n",
     "    \"\"\"\n",
     "    Plot the network graph\n",
     "    \"\"\"\n",
@@ -504,7 +483,7 @@
     "                        xaxis=dict(showgrid=False, zeroline=False, showticklabels=False),\n",
     "                        yaxis=dict(showgrid=False, zeroline=False, showticklabels=False))\n",
     "                    )\n",
-    "    fig.show()"
+    "    return fig"
    ]
   },
   {
