--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -433,7 +433,7 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(len(centrality_measures), 1, figsize=(20, 10))\n",
+    "fig, axes = plt.subplots(len(centrality_measures), figsize=(20, 10))\n",
     "for i, centrality_measure in enumerate(centrality_measures):\n",
     "    axes[i].set_title(f\"{convert_to_normal(centrality_measure.name)}\")\n",
     "    axes[i][0] = plot_network_graph(graph=graph, centrality_result=centrality_measure)\n",
