Work in progress

--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -293,15 +293,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "2fba4471",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import plotly.tools as tls\n",
+    "from plotly.offline import plot, iplot"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 69,
    "id": "fa90a5da",
    "metadata": {},
    "outputs": [],
@@ -372,7 +375,7 @@
     "    node_trace.marker.cmin = min(node_centrality)\n",
     "    node_trace.text = node_text\n",
     "\n",
-    "    fig = go.Figure(data=[edge_trace, node_trace],\n",
+    "    return go.Figure(data=[edge_trace, node_trace],\n",
     "                    layout=go.Layout(\n",
     "                        title=f'Output for \"{convert_to_normal(centrality_result.name)}\"',\n",
     "                        titlefont_size=16,\n",
@@ -381,8 +384,7 @@
     "                        margin=dict(b=20, l=5, r=5, t=40),\n",
     "                        xaxis=dict(showgrid=False, zeroline=False, showticklabels=False),\n",
     "                        yaxis=dict(showgrid=False, zeroline=False, showticklabels=False))\n",
-    "                    )\n",
-    "    return fig"
+    "                    )"
    ]
   },
   {
@@ -521,6 +523,8 @@
    ],
    "source": [
     "fig, axes = plt.subplots(len(centrality_measures), figsize=(10, 10))\n",
+    "\n",
+    "\n",
     "for i, centrality_measure in enumerate(centrality_measures):\n",
     "    axes[i].set_title(f\"{convert_to_normal(centrality_measure.name)}\")\n",
     "    axes[i] = plot_network_graph(graph=graph, centrality_result=centrality_measure)\n",
