--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -523,7 +523,7 @@
    ],
    "source": [
     "fig, axes = plt.subplots(len(centrality_measures), figsize=(10, 10))\n",
-    "\n",
+    "fig = tls.make_subplots(rows=len(centrality_measures), cols=1)\n",
     "\n",
     "for i, centrality_measure in enumerate(centrality_measures):\n",
     "    axes[i].set_title(f\"{convert_to_normal(centrality_measure.name)}\")\n",
