Work in progress

--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -2689,7 +2689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "id": "0de8bdf6",
    "metadata": {},
    "outputs": [
@@ -2709,94 +2709,169 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          0.17207176134527596,
-          0.13071522788941872,
-          -0.106346232627763,
-          0.13071522788941872,
-          -0.12039902805508058,
-          -0.22321960973597282,
-          -0.12039902805508058,
-          -0.036459525150042485,
-          -0.12039902805508058,
-          -0.0777688969406885,
-          0.16280934292408517,
-          -0.036459525150042485,
-          0.16280934292408517,
-          0.42714225145854035,
-          -0.37015838022244524,
-          -0.5552153311187716,
-          -0.37015838022244524,
-          -0.5978740513971498,
-          -0.37015838022244524,
-          -0.036459525150042485,
-          0.2130621414275189,
-          0.13071522788941872,
-          0.13071522788941872,
-          0.3605960901294793,
-          0.13071522788941872,
-          0.022272560778907984,
-          0.13071522788941872,
-          0.30835879316046944,
-          0.13071522788941872,
-          -0.036459525150042485,
-          0.13071522788941872,
-          0.38260323612964925,
-          0.13071522788941872,
-          -0.09219034999543277
+          0.3547909383194655,
+          0.4306934557191249,
+          0.021446238657176105,
+          -0.09598564094467284,
+          -0.7904710405551729,
+          -0.6296981478143461,
+          -0.6116797893782566,
+          -0.49441787358190725,
+          0.07672837821351708,
+          -0.09598564094467284,
+          -0.6296981478143461,
+          -0.36144147454093023,
+          -0.6296981478143461,
+          -0.7872610656324799,
+          -0.3884800302895781,
+          -0.36144147454093023,
+          -0.09598564094467284,
+          -0.36144147454093023,
+          -0.09598564094467284,
+          0.166182371099573,
+          -0.09598564094467284,
+          -0.34842331962338363,
+          -0.09598564094467284,
+          -0.06844516223888526,
+          -0.09598564094467284,
+          -0.10370869974307884,
+          -0.038016189390699125,
+          -0.1520282168141737,
+          -0.038016189390699125,
+          -0.07690371263832324,
+          -0.038016189390699125,
+          0.021068033124363474,
+          -0.038016189390699125,
+          -0.06844516223888526,
+          -0.038016189390699125,
+          0.08580840904127587,
+          0.543023835639549,
+          0.4306934557191249,
+          0.5463076109224303,
+          0.4306934557191249,
+          0.4306934557191249,
+          0.4218451444970495,
+          0.4306934557191249,
+          0.2581199309889052,
+          0.4306934557191249,
+          0.6256064208217417,
+          0.4306934557191249,
+          0.45548062620555113,
+          0.4306934557191249,
+          0.6124858064879258,
+          0.4306934557191249,
+          0.166182371099573,
+          0.4306934557191249,
+          0.5790514205601115,
+          0.4306934557191249,
+          0.3426676371679743,
+          0.4306934557191249,
+          0.49729900914626435,
+          -0.49441787358190725,
+          -0.34842331962338363,
+          -0.49372961847409397,
+          -0.5979152849520171,
+          -0.49372961847409397,
+          -0.34842331962338363
          ],
          "y": [
-          0.5813933845417482,
-          0.34360145912217244,
-          0.6920046544702989,
-          0.34360145912217244,
-          -0.6414728405590983,
-          -0.8253203340333384,
-          -0.6414728405590983,
-          -0.10304727651495153,
-          -0.6414728405590983,
-          -1,
-          -0.3035280559593371,
-          -0.10304727651495153,
-          -0.3035280559593371,
-          -0.5259905463745425,
-          -0.17284772656879713,
-          -0.30556647992038866,
-          -0.17284772656879713,
-          -0.1216058245407242,
-          -0.17284772656879713,
-          -0.10304727651495153,
-          0.1756479879138977,
-          0.34360145912217244,
-          0.34360145912217244,
-          0.2811510840562466,
-          0.34360145912217244,
-          0.5537903368780287,
-          0.34360145912217244,
-          0.562124619760651,
-          0.34360145912217244,
-          -0.10304727651495153,
-          0.34360145912217244,
-          0.42978998168419646,
-          0.34360145912217244,
-          0.3798755760439373
+          -0.3696069485165481,
+          -0.45245671767901857,
+          0.08303840242023784,
+          0.08620149830399294,
+          0.03961379728383858,
+          -0.007005897341744956,
+          0.38272243684708734,
+          0.2761761290813465,
+          0.23456801072705394,
+          0.08620149830399294,
+          -0.007005897341744956,
+          -0.00007625099128825746,
+          -0.007005897341744956,
+          -0.07147758905089317,
+          -0.1381934660842701,
+          -0.00007625099128825746,
+          0.08620149830399294,
+          -0.00007625099128825746,
+          0.08620149830399294,
+          -0.1795299618255238,
+          0.08620149830399294,
+          0.1325603102565446,
+          0.08620149830399294,
+          0.4096909799339622,
+          0.08620149830399294,
+          0.2053087872738024,
+          0.844308605790978,
+          0.9359537263158834,
+          0.844308605790978,
+          0.998964983551539,
+          0.844308605790978,
+          1,
+          0.844308605790978,
+          0.4096909799339622,
+          0.844308605790978,
+          0.9195763577249539,
+          -0.6134271020282986,
+          -0.45245671767901857,
+          -0.49927284583775505,
+          -0.45245671767901857,
+          -0.45245671767901857,
+          -0.575530248544014,
+          -0.45245671767901857,
+          -0.6051418140546476,
+          -0.45245671767901857,
+          -0.440188974770752,
+          -0.45245671767901857,
+          -0.6515283320984314,
+          -0.45245671767901857,
+          -0.5447244311195928,
+          -0.45245671767901857,
+          -0.1795299618255238,
+          -0.45245671767901857,
+          -0.3637771104361228,
+          -0.45245671767901857,
+          -0.5845820152921186,
+          -0.45245671767901857,
+          -0.3173088952887256,
+          0.2761761290813465,
+          0.1325603102565446,
+          -0.0034287976289022505,
+          -0.13142662692257265,
+          -0.0034287976289022505,
+          0.1325603102565446
          ]
         },
         {
          "hoverinfo": "text",
          "marker": {
-          "cmax": 0.3529411764705882,
+          "cmax": 0.28125,
           "cmin": 0,
           "color": [
-           0.058823529411764705,
-           0.058823529411764705,
-           0.1764705882352941,
+           0.03125,
+           0.03125,
+           0.03125,
+           0.03125,
+           0.03125,
+           0.0625,
+           0.03125,
+           0.15625,
+           0.15625,
+           0.03125,
+           0.03125,
+           0.28125,
            0,
-           0.11764705882352941,
-           0.1764705882352941,
+           0.03125,
            0,
-           0.058823529411764705,
            0,
-           0.3529411764705882,
+           0.0625,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
            0,
            0,
            0,
@@ -2861,65 +2936,110 @@
          },
          "mode": "markers",
          "text": [
-          "Node: 'C02D5.3'<br>Out Degree Centrality: 0.058823529411764705",
-          "Node: 'C29E4.7'<br>Out Degree Centrality: 0.058823529411764705",
-          "Node: 'C08F8.8'<br>Out Degree Centrality: 0.1764705882352941",
-          "Node: 'K02F3.5'<br>Out Degree Centrality: 0.0",
-          "Node: 'C34C6.5'<br>Out Degree Centrality: 0.11764705882352941",
-          "Node: 'ZK686.4'<br>Out Degree Centrality: 0.1764705882352941",
-          "Node: 'ZC518.2'<br>Out Degree Centrality: 0.0",
-          "Node: 'W02D3.11'<br>Out Degree Centrality: 0.058823529411764705",
-          "Node: 'C09D4.5'<br>Out Degree Centrality: 0.0",
-          "Node: 'VC5.4'<br>Out Degree Centrality: 0.3529411764705882",
-          "Node: 'F55C5.8'<br>Out Degree Centrality: 0.0",
-          "Node: 'C13F10.7'<br>Out Degree Centrality: 0.0",
-          "Node: 'F45E1.6'<br>Out Degree Centrality: 0.0",
-          "Node: 'C06A5.11'<br>Out Degree Centrality: 0.0",
-          "Node: 'C02D5.4'<br>Out Degree Centrality: 0.0",
-          "Node: 'F13A7.10'<br>Out Degree Centrality: 0.0",
-          "Node: 'F32E10.4'<br>Out Degree Centrality: 0.0",
-          "Node: 'F20D1.9'<br>Out Degree Centrality: 0.0"
+          "Node: 'R12C12.2'<br>Out Degree Centrality: 0.03125",
+          "Node: 'C26D10.6'<br>Out Degree Centrality: 0.03125",
+          "Node: 'E01B7.1'<br>Out Degree Centrality: 0.03125",
+          "Node: 'C38C3.5'<br>Out Degree Centrality: 0.03125",
+          "Node: 'ZK1053.5'<br>Out Degree Centrality: 0.03125",
+          "Node: 'R10E4.4'<br>Out Degree Centrality: 0.0625",
+          "Node: 'F09G2.8'<br>Out Degree Centrality: 0.03125",
+          "Node: 'Y47D3A.4'<br>Out Degree Centrality: 0.15625",
+          "Node: 'C47E12.4'<br>Out Degree Centrality: 0.15625",
+          "Node: 'H38K22.2'<br>Out Degree Centrality: 0.03125",
+          "Node: 'Y71G12B.8'<br>Out Degree Centrality: 0.03125",
+          "Node: 'Y116A8C.12'<br>Out Degree Centrality: 0.28125",
+          "Node: 'Y48G8AR.1'<br>Out Degree Centrality: 0.0",
+          "Node: 'C10G11.5'<br>Out Degree Centrality: 0.03125",
+          "Node: 'T13H5.7'<br>Out Degree Centrality: 0.0",
+          "Node: 'F21C3.3'<br>Out Degree Centrality: 0.0",
+          "Node: 'B0285.1'<br>Out Degree Centrality: 0.0625",
+          "Node: 'H08M01.2'<br>Out Degree Centrality: 0.0",
+          "Node: 'T22H2.5'<br>Out Degree Centrality: 0.0",
+          "Node: 'F34D10.2'<br>Out Degree Centrality: 0.0",
+          "Node: 'C55F2.1'<br>Out Degree Centrality: 0.0",
+          "Node: 'F07A11.6'<br>Out Degree Centrality: 0.0",
+          "Node: 'F21H11.2'<br>Out Degree Centrality: 0.0",
+          "Node: 'C56C10.10'<br>Out Degree Centrality: 0.0",
+          "Node: 'Y63D3A.6'<br>Out Degree Centrality: 0.0",
+          "Node: 'B0361.5'<br>Out Degree Centrality: 0.0",
+          "Node: 'Y111B2A.22'<br>Out Degree Centrality: 0.0",
+          "Node: 'F37A4.8'<br>Out Degree Centrality: 0.0",
+          "Node: 'K02F2.2'<br>Out Degree Centrality: 0.0",
+          "Node: 'R01H10.6'<br>Out Degree Centrality: 0.0",
+          "Node: 'C35C5.6'<br>Out Degree Centrality: 0.0",
+          "Node: 'B0495.7'<br>Out Degree Centrality: 0.0",
+          "Node: 'B0205.6'<br>Out Degree Centrality: 0.0"
          ],
          "type": "scatter",
          "x": [
-          0.17207176134527596,
-          -0.106346232627763,
-          -0.12039902805508058,
-          -0.0777688969406885,
-          0.16280934292408517,
-          -0.37015838022244524,
-          0.42714225145854035,
-          0.2130621414275189,
-          -0.5978740513971498,
-          0.13071522788941872,
-          -0.09219034999543277,
-          0.022272560778907984,
-          0.38260323612964925,
-          -0.5552153311187716,
-          0.3605960901294793,
-          0.30835879316046944,
-          -0.036459525150042485,
-          -0.22321960973597282
+          0.3547909383194655,
+          0.021446238657176105,
+          -0.7904710405551729,
+          -0.6116797893782566,
+          0.07672837821351708,
+          -0.6296981478143461,
+          -0.3884800302895781,
+          -0.09598564094467284,
+          -0.038016189390699125,
+          0.543023835639549,
+          0.5463076109224303,
+          0.4306934557191249,
+          -0.10370869974307884,
+          -0.49441787358190725,
+          0.3426676371679743,
+          0.6124858064879258,
+          -0.49372961847409397,
+          0.166182371099573,
+          -0.06844516223888526,
+          -0.7872610656324799,
+          0.45548062620555113,
+          -0.5979152849520171,
+          -0.36144147454093023,
+          -0.07690371263832324,
+          0.49729900914626435,
+          -0.1520282168141737,
+          0.08580840904127587,
+          0.021068033124363474,
+          0.5790514205601115,
+          -0.34842331962338363,
+          0.6256064208217417,
+          0.2581199309889052,
+          0.4218451444970495
          ],
          "y": [
-          0.5813933845417482,
-          0.6920046544702989,
-          -0.6414728405590983,
-          -1,
-          -0.3035280559593371,
-          -0.17284772656879713,
-          -0.5259905463745425,
-          0.1756479879138977,
-          -0.1216058245407242,
-          0.34360145912217244,
-          0.3798755760439373,
-          0.5537903368780287,
-          0.42978998168419646,
-          -0.30556647992038866,
-          0.2811510840562466,
-          0.562124619760651,
-          -0.10304727651495153,
-          -0.8253203340333384
+          -0.3696069485165481,
+          0.08303840242023784,
+          0.03961379728383858,
+          0.38272243684708734,
+          0.23456801072705394,
+          -0.007005897341744956,
+          -0.1381934660842701,
+          0.08620149830399294,
+          0.844308605790978,
+          -0.6134271020282986,
+          -0.49927284583775505,
+          -0.45245671767901857,
+          0.2053087872738024,
+          0.2761761290813465,
+          -0.5845820152921186,
+          -0.5447244311195928,
+          -0.0034287976289022505,
+          -0.1795299618255238,
+          0.4096909799339622,
+          -0.07147758905089317,
+          -0.6515283320984314,
+          -0.13142662692257265,
+          -0.00007625099128825746,
+          0.998964983551539,
+          -0.3173088952887256,
+          0.9359537263158834,
+          0.9195763577249539,
+          1,
+          -0.3637771104361228,
+          0.1325603102565446,
+          -0.440188974770752,
+          -0.6051418140546476,
+          -0.575530248544014
          ]
         }
        ],
