--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -394,7 +394,7 @@
     "    html.Div([\n",
     "        html.Div(id=\"w_output\")\n",
     "    ], style={})\n",
-    "], style={\"background\": \"white\"})"
+    "], style={\"background\": \"white\",\"padding\": \"16px\",\"display\": \"flex\",\"flex-direction:: \"column\"})\""
    ]
   },
   {
