--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -390,7 +390,7 @@
     "        w_show_algo_comparsion,\n",
     "        w_show_dataset_comparsion,\n",
     "        w_show_verbose\n",
-    "    ], style={}),\n",
+    "    ], style={\"background\": \"black\"}),\n",
     "    html.Div([\n",
     "        html.Div(id=\"w_output\")\n",
     "    ], style={})\n",
