--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 14 nodes and 13 edges\n"
+      "Graph with 6 nodes and 5 edges\n"
      ]
     }
    ],
@@ -390,11 +390,11 @@
     "        w_show_algo_comparsion,\n",
     "        w_show_dataset_comparsion,\n",
     "        w_show_verbose\n",
-    "    ], style={\"background\": \"black\"}),\n",
+    "    ], style={}),\n",
     "    html.Div([\n",
     "        html.Div(id=\"w_output\")\n",
     "    ], style={})\n",
-    "], style={\"background\": \"white\",\"padding\": \"16px\",\"display\": \"flex\",\"flex-direction\": \"column\"})"
+    "], style={\"background\": \"white\"})"
    ]
   },
   {
@@ -445,7 +445,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x156ffd880>"
+       "<IPython.lib.display.IFrame at 0x1078510a0>"
       ]
      },
      "metadata": {},
