--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -390,11 +390,11 @@
     "        w_show_algo_comparsion,\n",
     "        w_show_dataset_comparsion,\n",
     "        w_show_verbose\n",
-    "    ], style={}),\n",
+    "    ], style={\"background\": \"black\"}),\n",
     "    html.Div([\n",
     "        html.Div(id=\"w_output\")\n",
     "    ], style={})\n",
-    "], style={\"background\": \"white\"})"
+    "], style={\"background\": \"white\",\"padding\": \"16px\",\"display\": \"flex\",\"flex-direction\": \"column\"})"
    ]
   },
   {
