--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 6 nodes and 5 edges\n"
+      "Graph with 3 nodes and 2 edges\n"
      ]
     }
    ],
@@ -445,7 +445,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1078510a0>"
+       "<IPython.lib.display.IFrame at 0x107105b20>"
       ]
      },
      "metadata": {},
