--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -327,7 +327,7 @@
     "        value=data_files[0],\n",
     "        clearable=False\n",
     "    )\n",
-    "])\n",
+    "], style={\"padding\": \"10px\"})\n",
     "\n",
     "w_algo_list = html.Div([\n",
     "    html.Label(\"Algorihtm(s)\"),\n",
@@ -337,7 +337,7 @@
     "        value=algos[0],\n",
     "        multi=True,\n",
     "    )\n",
-    "])\n",
+    "], style={\"padding\": \"10px\"})\n",
     "\n",
     "w_sample_size = html.Div([\n",
     "    html.Label(\"Sample size\"),\n",
@@ -349,7 +349,7 @@
     "        max=100,\n",
     "        step=1\n",
     "    )\n",
-    "])\n",
+    "], style={\"padding\": \"10px\"})\n",
     "\n",
     "w_show_algo_comparsion = html.Div([\n",
     "    html.Label(\"Show algorithm comparsion\"),\n",
@@ -359,7 +359,7 @@
     "        value=[\"show\"] if show_algo_comparsion else [],\n",
     "        labelStyle={\"display\": \"inline-block\"}\n",
     "    )\n",
-    "])\n",
+    "], style={\"padding\": \"10px\"})\n",
     "\n",
     "w_show_dataset_comparsion = html.Div([\n",
     "    html.Label(\"Show dataset comparsion\"),\n",
@@ -369,7 +369,7 @@
     "        value=[\"show\"] if show_dataset_comparsion else [],\n",
     "        labelStyle={\"display\": \"inline-block\"}\n",
     "    )\n",
-    "])\n",
+    "], style={\"padding\": \"10px\"})\n",
     "\n",
     "w_show_verbose = html.Div([\n",
     "    html.Label(\"Show verbose\"),\n",
@@ -379,7 +379,7 @@
     "        value=[\"show\"] if show_verbose else [],\n",
     "        labelStyle={\"display\": \"inline-block\"}\n",
     "    )\n",
-    "])\n",
+    "], style={\"padding\": \"10px\"})\n",
     "\n",
     "app.layout = html.Div([\n",
     "    html.H1(\"Centrality measures\"),\n",
