Work in progress

--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -382,7 +382,7 @@
     "], style={\"padding\": \"10px\"})\n",
     "\n",
     "app.layout = html.Div([\n",
-    "    html.H1(\"Centrality measures\"),\n",
+    "    html.H1(\"Centrality measures\").set_props(style={\"margin\": \"0px\"}),\n",
     "    html.Div([\n",
     "        w_dataset,\n",
     "        w_algo_list,\n",
