--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 17 nodes and 31 edges\n"
+      "Graph with 22 nodes and 21 edges\n"
      ]
     }
    ],
@@ -302,7 +302,19 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'H1' object has no attribute 'set_props'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [4], line 79\u001b[0m\n\u001b[1;32m     58\u001b[0m w_show_dataset_comparsion \u001b[38;5;241m=\u001b[39m html\u001b[38;5;241m.\u001b[39mDiv([\n\u001b[1;32m     59\u001b[0m     html\u001b[38;5;241m.\u001b[39mLabel(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShow dataset comparsion\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[1;32m     60\u001b[0m     dcc\u001b[38;5;241m.\u001b[39mChecklist(\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     65\u001b[0m     )\n\u001b[1;32m     66\u001b[0m ], style\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpadding\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m10px\u001b[39m\u001b[38;5;124m\"\u001b[39m})\n\u001b[1;32m     68\u001b[0m w_show_verbose \u001b[38;5;241m=\u001b[39m html\u001b[38;5;241m.\u001b[39mDiv([\n\u001b[1;32m     69\u001b[0m     html\u001b[38;5;241m.\u001b[39mLabel(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShow verbose\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[1;32m     70\u001b[0m     dcc\u001b[38;5;241m.\u001b[39mChecklist(\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     75\u001b[0m     )\n\u001b[1;32m     76\u001b[0m ], style\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpadding\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m10px\u001b[39m\u001b[38;5;124m\"\u001b[39m})\n\u001b[1;32m     78\u001b[0m app\u001b[38;5;241m.\u001b[39mlayout \u001b[38;5;241m=\u001b[39m html\u001b[38;5;241m.\u001b[39mDiv([\n\u001b[0;32m---> 79\u001b[0m     html\u001b[38;5;241m.\u001b[39mH1(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCentrality measures\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mset_props(style\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmargin\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0px\u001b[39m\u001b[38;5;124m\"\u001b[39m}),\n\u001b[1;32m     80\u001b[0m     html\u001b[38;5;241m.\u001b[39mDiv([\n\u001b[1;32m     81\u001b[0m         w_dataset,\n\u001b[1;32m     82\u001b[0m         w_algo_list,\n\u001b[1;32m     83\u001b[0m         w_sample_size,\n\u001b[1;32m     84\u001b[0m         w_show_algo_comparsion,\n\u001b[1;32m     85\u001b[0m         w_show_dataset_comparsion,\n\u001b[1;32m     86\u001b[0m         w_show_verbose\n\u001b[1;32m     87\u001b[0m     ], style\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpadding\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m16px\u001b[39m\u001b[38;5;124m\"\u001b[39m}),\n\u001b[1;32m     88\u001b[0m     html\u001b[38;5;241m.\u001b[39mDiv([\n\u001b[1;32m     89\u001b[0m         html\u001b[38;5;241m.\u001b[39mDiv(\u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw_output\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     90\u001b[0m     ], style\u001b[38;5;241m=\u001b[39m{})\n\u001b[1;32m     91\u001b[0m ], style\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbackground\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhite\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpadding\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m16px\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdisplay\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mflex\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mflex-direction\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolumn\u001b[39m\u001b[38;5;124m\"\u001b[39m})\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'H1' object has no attribute 'set_props'"
+     ]
+    }
+   ],
    "source": [
     "#--------------------------\n",
     "# some configuration(s)\n",
@@ -382,7 +394,7 @@
     "], style={\"padding\": \"10px\"})\n",
     "\n",
     "app.layout = html.Div([\n",
-    "    html.H1(\"Centrality measures\").set_props(style={\"margin\": \"0px\"}),\n",
+    "    html.H1(\"Centrality measures\"),\n",
     "    html.Div([\n",
     "        w_dataset,\n",
     "        w_algo_list,\n",
@@ -399,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,31 +439,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1443d8430>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "app.run_server(mode='inline')"
    ]
@@ -465,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
