--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -403,26 +403,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @app.callback(\n",
-    "#     Output(\"w_output\", \"children\"),\n",
-    "#     [Input(\"w_dataset\", \"value\"),\n",
-    "#         Input(\"w_algo_list\", \"value\"),\n",
-    "#         Input(\"w_sample_size\", \"value\"),\n",
-    "#         Input(\"w_show_algo_comparsion\", \"value\"),\n",
-    "#         Input(\"w_show_dataset_comparsion\", \"value\"),\n",
-    "#         Input(\"w_show_verbose\", \"value\")]\n",
-    "# )\n",
-    "# def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
-    "#     print(f\"dataset: {dataset}\")\n",
-    "#     print(f\"algo_list: {algo_list}\")\n",
-    "#     print(f\"sample_size: {sample_size}\")\n",
-    "#     print(f\"show_algo_comparsion: {show_algo_comparsion}\")\n",
-    "#     print(f\"show_dataset_comparsion: {show_dataset_comparsion}\")\n",
-    "#     print(f\"show_verbose: {show_verbose}\")\n",
+    "@app.callback(\n",
+    "    Output(\"w_output\", \"children\"),\n",
+    "    [Input(\"w_dataset\", \"value\"),\n",
+    "        Input(\"w_algo_list\", \"value\"),\n",
+    "        Input(\"w_sample_size\", \"value\"),\n",
+    "        Input(\"w_show_algo_comparsion\", \"value\"),\n",
+    "        Input(\"w_show_dataset_comparsion\", \"value\"),\n",
+    "        Input(\"w_show_verbose\", \"value\")]\n",
+    ")\n",
+    "def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
+    "    print(f\"dataset: {dataset}\")\n",
+    "    print(f\"algo_list: {algo_list}\")\n",
+    "    print(f\"sample_size: {sample_size}\")\n",
+    "    print(f\"show_algo_comparsion: {show_algo_comparsion}\")\n",
+    "    print(f\"show_dataset_comparsion: {show_dataset_comparsion}\")\n",
+    "    print(f\"show_verbose: {show_verbose}\")\n",
     "\n",
-    "#     return html.Div([\n",
-    "#         html.H2(\"Centrality measures for \" + dataset),\n",
-    "#     ])"
+    "    return html.Div([\n",
+    "        html.H2(\"Centrality measures for \" + dataset),\n",
+    "    ])"
    ]
   },
   {
