--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -405,12 +405,14 @@
    "source": [
     "@app.callback(\n",
     "    Output(\"w_output\", \"children\"),\n",
-    "    [Input(\"w_dataset\", \"value\"),\n",
+    "    [\n",
+    "        Input(\"w_dataset\", \"value\"),\n",
     "        Input(\"w_algo_list\", \"value\"),\n",
     "        Input(\"w_sample_size\", \"value\"),\n",
     "        Input(\"w_show_algo_comparsion\", \"value\"),\n",
     "        Input(\"w_show_dataset_comparsion\", \"value\"),\n",
-    "        Input(\"w_show_verbose\", \"value\")]\n",
+    "        Input(\"w_show_verbose\", \"value\")\n",
+    "    ]\n",
     ")\n",
     "def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
     "    print(f\"dataset: {dataset}\")\n",
